# WIDB2-mcp

./: LICENSE  README.md  main.py  pyproject.toml
thws-lecture/: README.md  business-thws-lecture.py  pyproject.toml
